[gd_scene load_steps=14 format=3 uid="uid://ofshsdgqvkkj"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_diwb8"]
[ext_resource type="Texture2D" uid="uid://erulj8bvsgw3" path="res://Assets/Animations/Enemies/Worm/worm_eat1.png" id="2_24qys"]
[ext_resource type="PackedScene" uid="uid://darcxovofbbgo" path="res://Scenes/healing_buff.tscn" id="2_rr6u2"]
[ext_resource type="PackedScene" uid="uid://c4ig045lt1p47" path="res://Scenes/boosting_buff.tscn" id="3_gc3wh"]
[ext_resource type="Texture2D" uid="uid://26f654kll1nx" path="res://Assets/Animations/Enemies/Worm/worm_eat2.png" id="3_wvsdr"]
[ext_resource type="Texture2D" uid="uid://iyban5i8prar" path="res://Assets/Animations/Enemies/Worm/worm_move1.png" id="4_icwxs"]
[ext_resource type="PackedScene" uid="uid://b3d348mleq0ms" path="res://Scenes/damage_buff.tscn" id="4_ut5kg"]
[ext_resource type="PackedScene" uid="uid://7itpi66kgl12" path="res://Scenes/triple_shot_buff.tscn" id="5_s0f3u"]
[ext_resource type="Texture2D" uid="uid://u4ukk8mixu01" path="res://Assets/Animations/Enemies/Worm/worm_move2.png" id="5_v5hlj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r3ohp"]
size = Vector2(33, 13)

[sub_resource type="SpriteFrames" id="SpriteFrames_iswhf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_24qys")
}, {
"duration": 1.0,
"texture": ExtResource("3_wvsdr")
}],
"loop": false,
"name": &"eat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_icwxs")
}, {
"duration": 1.0,
"texture": ExtResource("5_v5hlj")
}],
"loop": true,
"name": &"move",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_elye3"]
radius = 1646.11

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1sjgy"]
size = Vector2(46, 24)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 17
platform_on_leave = 2
script = ExtResource("1_diwb8")
HealingBuff = ExtResource("2_rr6u2")
BoostingBuff = ExtResource("3_gc3wh")
DamageBuff = ExtResource("4_ut5kg")
TripleShotBuff = ExtResource("5_s0f3u")

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_r3ohp")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_iswhf")
animation = &"move"

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="DetectionShape" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_elye3")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="AttackAreaShape" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_1sjgy")

[node name="DelayAttackTimer" type="Timer" parent="."]

[node name="DamageNumbersOrigin" type="Node2D" parent="."]
position = Vector2(0, -4)

[node name="Navigation" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]

[node name="NavTimer" type="Timer" parent="Navigation"]
wait_time = 0.1
autostart = true

[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="DelayAttackTimer" to="." method="_on_delay_attack_timer_timeout"]
[connection signal="timeout" from="Navigation/NavTimer" to="." method="_on_nav_timer_timeout"]
